--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.reflections:reflections:0.10.2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'com.google.code.gson:gson:2.10.1'
+	implementation group: 'org.yaml', name: 'snakeyaml', version: '1.28'
 }
 
 dependencyManagement {
