--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,8 @@ dependencies {
 	testImplementation 'org.awaitility:awaitility:3.1.2'
 	implementation 'com.esri.geometry:esri-geometry-api:2.2.4'
 	implementation group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans', version: '1.17'
+	implementation("net.forthecrown:nbt:1.5.0")
 
-	implementation 'com.github.Querz:NBT:6.1'
 }
 
 dependencyManagement {
