--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 	implementation 'com.esri.geometry:esri-geometry-api:2.2.4'
 	implementation group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans', version: '1.17'
 	implementation("net.forthecrown:nbt:1.5.0")
+	implementation 'io.netty:netty-all:4.1.24.Final'
 
 }
 
