finished ResourceFacade.java and many things also the integration of PostgreSQL with postgresql-42.7.2.jar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+logging.level.org.springframework.data.mongodb.core = DEBUG
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/acidium
+spring.datasource.username=postgres
+spring.datasource.password=Yqsz071102 
+#TODO the datasource should be changed when put into production...
