--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,14 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.modulith:spring-modulith-starter-core'
 	implementation 'org.springframework.shell:spring-shell-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.modulith:spring-modulith-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+	runtimeOnly 'org.postgresql:postgresql'
 	testCompileOnly 'org.projectlombok:lombok:1.18.30'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
@@ -60,6 +65,8 @@ dependencies {
 	implementation group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans', version: '1.17'
 	implementation("net.forthecrown:nbt:1.5.0")
 	implementation 'io.netty:netty-all:4.1.24.Final'
+
+
 
 }
 
