ALOT OF DAMN WORK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-logging.level.org.springframework.data.mongodb.core = DEBUG
+logging.level.root = INFO
+logging.level.sql = INFO
+logging.level.web = INFO
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/acidium
 spring.datasource.username=postgres
