--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 	implementation 'io.netty:netty-all:4.1.24.Final'
 
 
+	implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.12.3'
+
 
 }
 
