--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation 'org.springframework.shell:spring-shell-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.modulith:spring-modulith-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -68,6 +70,8 @@ dependencies {
 	implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.12.3'
 
 	implementation 'com.github.implicit-invocation:jwalkable:master-SNAPSHOT'
+
+	implementation "com.badlogicgames.gdx:gdx-ai:1.8.1"
 
 }
 
