--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,12 @@ logging.level.root = INFO
 logging.level.sql = INFO
 logging.level.web = INFO
 
+#Debug logging level for project
+logging.level.org.izdevs.acidium = DEBUG
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/acidium
 spring.datasource.username=postgres
 spring.datasource.password=Yqsz071102
 #TODO the datasource should be changed when put into production...
+
+spring.datasource.type = org.postgresql.ds.PGSimpleDataSource
