--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.username=postgres
 spring.datasource.password=Yqsz071102
 #TODO the datasource should be changed when put into production...
 
-
+management.endpoints.web.exposure.include=health,info,prometheus,loggers
