--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=Yqsz071102
 #TODO the datasource should be changed when put into production...
 
 management.endpoints.web.exposure.include=health,info,prometheus,loggers
+
+spring.docker.compose.file = docker-compose.yml
