--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.root = INFO
-logging.level.sql = INFO
+logging.level.sql = DEBUG
 logging.level.web = INFO
 
 #Debug logging level for project
