--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,6 +41,9 @@ jobs:
       with:
         name: Package
         path: build/libs
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')   
     
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
