--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,10 +40,8 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Package
-        path: build/libs
-    - name: Release
-      uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')   
+        path: build/libs/*.jar
+     
     
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
