--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.datasource.password=Yqsz071102
 management.endpoints.web.exposure.include=health,info,prometheus,loggers
 
 spring.docker.compose.file = docker-compose.yml
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password= # Login password of the redis server.
