--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.docker.compose.file = docker-compose.yml
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.password= # Login password of the redis server.
+spring.data.redis.password=Yqsz071102# Login password of the redis server.
 
 spring.main.banner-mode=log
