--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.data.redis.port=6379
 spring.data.redis.password=Yqsz071102# Login password of the redis server.
 
 spring.main.banner-mode=log
+
+version="0.0.1 ALPHA"
