added drop table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.main.banner-mode=log
 version="0.0.1 ALPHA"
 
 generateUponStart = true
+
+management.metrics.tags.application=${spring.application.name}
