--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ version="0.0.1 ALPHA"
 generateUponStart = true
 
 management.metrics.tags.application=${spring.application.name}
+
+misc.print_license = false
