--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,8 @@ dependencies {
 	implementation group: 'com.jcabi', name: 'jcabi-log', version: '0.24.1'
 
 	compileOnly 'com.yworks:yguard:4.1.0'
+
+	implementation("com.google.guava:guava:33.2.0-jre")
 }
 
 dependencyManagement {
