--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ logging.level.org.izdevs.acidium = DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/acidium
 spring.datasource.username=postgres
 spring.datasource.password=Yqsz071102
+spring.jpa.hibernate.ddl-auto=create
 management.endpoints.web.exposure.include=health,info,prometheus,loggers
 
 spring.docker.compose.file = docker-compose.yml
