massive bug fixes to add support for spring framework phase 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.root = INFO
 logging.level.sql = DEBUG
 logging.level.web = INFO
-
+debug=true
 #Debug logging level for project
 logging.level.org.izdevs.acidium = DEBUG
 
@@ -26,3 +26,4 @@ generateUponStart = true
 management.metrics.tags.application=${spring.application.name}
 
 misc.print_license = false
+
