NBT is now deprecated, resources is planning to be migrated

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:postgresql'
+	implementation("com.google.guava:guava:33.2.1-jre")
 
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
