successful rework on legacy code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/acidium
 spring.datasource.username=postgres
 spring.datasource.password=Yqsz071102
 spring.jpa.hibernate.ddl-auto=create
-management.endpoints.web.exposure.include=health,info,prometheus,loggers
+management.endpoints.web.exposure.include=health,info,prometheus
 
-spring.docker.compose.file = docker-compose.yml
+debug=true
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.password=Yqsz071102# Login password of the redis server.
+spring.data.redis.password=Yqsz071102 #Login password of the redis server.
 
 spring.main.banner-mode=log
 
