--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'org.graalvm.buildtools.native' version '0.9.28'
 	id 'io.freefair.lombok' version "8.6"
-
+	id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 group = 'org.izdevs'
