serialization fix, seems like everything is not finished after 6 months already

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ logging.level.web = INFO
 #Debug logging level for project
 logging.level.org.izdevs.acidium = DEBUG
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/acidium
-spring.datasource.username=postgres
-spring.datasource.password=Yqsz071102
+spring.datasource.url=jdbc:postgresql://192.168.1.210:5432/acidium
+spring.datasource.username=10e3e6ed62
+spring.datasource.password=12c352d33a
 spring.jpa.hibernate.ddl-auto=create
 management.endpoints.web.exposure.include=health,info,prometheus
 
