schema update alongside some deletions already, removed CommandDefinition.java

--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ dependencies {
 	implementation 'com.esri.geometry:esri-geometry-api:2.2.4'
 	implementation group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans', version: '1.17'
 	implementation("net.forthecrown:nbt:1.5.0")
-	implementation 'io.netty:netty-all:4.1.100.Final'
+	implementation 'io.netty:netty-all:4.1.108.Final'
 
 
 	implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.12.3'
@@ -96,8 +96,9 @@ dependencies {
 	implementation group: 'com.jcabi', name: 'jcabi-log', version: '0.24.1'
 
 	compileOnly 'com.yworks:yguard:4.1.0'
-
+	runtimeOnly 'org.postgresql:postgresql'
 	implementation("com.google.guava:guava:33.2.0-jre")
+
 }
 
 dependencyManagement {
