--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation("com.google.guava:guava:33.2.0-jre")
 
+	implementation("org.springframework.experimental:spring-native:0.12.2")
 }
 
 dependencyManagement {
