--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ dependencies {
 	implementation group: 'com.jcabi', name: 'jcabi-log', version: '0.24.1'
 
 	implementation("com.google.guava:guava:33.2.0-jre")
+	implementation 'commons-beanutils:commons-beanutils:1.10.0'
 }
 
 dependencyManagement {
