serialization and mob fix removed Mob.class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ logging.level.web = DEBUG
 logging.level.org.izdevs.acidium = DEBUG
 
 #redis info is here
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.password=Yqsz071102 #Login password of the redis server.
-spring.data.redis.database=0
+#spring.data.redis.host=127.0.0.1
+#spring.data.redis.port=6379
+#spring.data.redis.password=Yqsz071102 #Login password of the redis server.
+#spring.data.redis.database=0
 
 management.endpoints.web.exposure.include=health,info,prometheus
 
